      Possible memory cycle if result is accessed when not built.
   Add 'required_when'
   Add Bulgarian message file (dpetrov)
   Bootstrap input_append/prepend: no linefeeds between input
   Add input_append_button tag to Bootstrap wrapper
   Correct camelcase for widgets in two fields
   Add 'value_when_empty' for multiple select
   Add SelectCSV multiple field

0.40010 Sun May 20, 2012
   Add 'when' clause to apply actions
   Fix memory leak on fields with defaults due to missing my causing
   $self to be closed over so that RAM was leaked if forms were constructed
   but never processed. (in default_<field_name> & validate_<field_name>
   methods)

0.40009 Mon May 14, 2012
    Re-implement improved version of 'reload_after_update'.

0.40008 Fri May 11, 2012
    Add 'missing' method to Field
    Use result in Bootstrap render_form_messages
    Fix Render::Table
    Propagate errors when they're added, so $form->has_errors
        works in sub validate
    Use do_render_label in Bootstrap wrapper to allow setting
        label class/attributes
    Add subfield convenience method.
    Remove 'reload_after_update'. Didn't work anyway. Bug: duplicate
        results with repeatables. (avoid with reload_after_update => 0)
    Re-factor RadioGroup widget to allow individually rendered options
    Support option groups in 'Select', 'RadioGroup' & 'CheckboxGroup' widgets

0.40007 Tues Apr 24, 2012
    Re-factor widget to provide 'render_element' method
    Various doc updates
    Move 'by_flag' processing into '_merge_updates'
    Handle disabled fields better; result_from_fields if no input
    Fix bug: html_attributes callback called with 'input' instead of 'element'

0.40006 Tues Apr 10, 2012
    Render::Table incorrect table start
    Minor doc cleanup
    Add 'build_label_method'
    Re-do merging of widget_tags
    Implement experimental 'include' list for Form/Compound fields
    Refactor merge_updates and update_subfields to handle contains